--- a/SpecialtyDiets.html
+++ b/SpecialtyDiets.html
@@ -13,7 +13,7 @@
 <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script >$.getScript("https://github.com/EnMin0206/EnMin0206.github.io/blob/master/learnmore.js");</script>
+<script src="learnmore.js"></script>
 <link rel="stylesheet" href="seniorserver.css">
 <style>
 body {background-color:#f4f7e5;
