--- a/SpecialtyDiets.html
+++ b/SpecialtyDiets.html
@@ -10,10 +10,9 @@
 <link rel="icon" 
       type="image/x-icon" 
       href="Fav.ico">
-<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> 
-<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="learnmore.js"></script>
+<link  href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <link rel="stylesheet" href="seniorserver.css">
 <style>
 body {background-color:#f4f7e5;
@@ -212,7 +211,99 @@ dd {padding:10px;
   <!--[if lt IE 9]>
     <script src="/js/html5shiv.js"></script>
   <![endif]-->
-
+<style>
+$(document).ready(function(){
+      $('.more').click(function(){
+	     $('.details').fadeIn(1000);
+		  return false;
+	  });  
+  });
+    $(document).ready(function(){
+      $('.more1').click(function(){
+	     $('.details1').fadeIn(1000);
+		  return false;
+	  });  
+  });
+    $(document).ready(function(){
+      $('.more2').click(function(){
+	     $('.details2').fadeIn(1000);
+		  return false;
+	  });  
+  });
+    $(document).ready(function(){
+      $('.more3').click(function(){
+	     $('.details3').fadeIn(1000);
+		  return false;
+	  });  
+  });
+    $(document).ready(function(){
+      $('.more4').click(function(){
+	     $('.details4').fadeIn(1000);
+		  return false;
+	  });  
+  });
+    $(document).ready(function(){
+      $('.more5').click(function(){
+	     $('.details5').fadeIn(1000);
+		  return false;
+	  });  
+  });
+   $(document).ready(function(){
+      $('.less').click(function(){
+	     $('.details').hide();
+		  return false;
+	  });  
+  });
+    $(document).ready(function(){
+      $('.less1').click(function(){
+	     $('.details1').hide();
+		  return false;
+	  });  
+  });
+    $(document).ready(function(){
+      $('.less2').click(function(){
+	     $('.details2').hide();
+		  return false;
+	  });  
+  });
+    $(document).ready(function(){
+      $('.less3').click(function(){
+	     $('.details3').hide();
+		  return false;
+	  });  
+  });
+    $(document).ready(function(){
+      $('.less4').click(function(){
+	     $('.details4').hide();
+		  return false;
+	  });  
+  });
+    $(document).ready(function(){
+      $('.less5').click(function(){
+	     $('.details5').hide();
+		  return false;
+		
+	  });  
+  });
+  function scrollWin1() {
+    window.scrollTo(0, 325);
+}
+function scrollWin2() {
+    window.scrollTo(0, 750);
+}
+function scrollWin3() {
+    window.scrollTo(0, 325);
+}
+function scrollWin4() {
+    window.scrollTo(0, 750);
+}
+function scrollWin5() {
+    window.scrollTo(0, 325);
+}
+function scrollWin6() {
+    window.scrollTo(0, 750);
+}
+</script>
 </head>
 <body>
 <div>
