--- a/SpecialtyDiets.html
+++ b/SpecialtyDiets.html
@@ -10,7 +10,7 @@
 <link rel="icon" 
       type="image/x-icon" 
       href="Fav.ico">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <style>
 body {background-color:#f4f7e5;
       }
@@ -208,7 +208,7 @@ dd {padding:10px;
   <!--[if lt IE 9]>
     <script src="/js/html5shiv.js"></script>
   <![endif]-->
-<style>
+<script>
 $(document).ready(function(){
       $('.more').click(function(){
 	     $('.details').fadeIn(1000);
